fix: Fix collapsing empty tableau

--- a/src/components/Pile/styles.css
+++ b/src/components/Pile/styles.css
@@ -1,5 +1,7 @@
 .Pile {
   position: relative;
+  min-width: 80px;
+  min-height: 112px;
 }
 
 .Pile-layout__Squared {
